[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "testerrr-sdk"
description = "test"
version = "1.5.1"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["test"]
authors = [{name = "test", email = "taha.ali@apimatic.io"}]
urls = {Documentation = "https://2ca2a6dc.apimatic-frontend.pages.dev/publish/682daea1265b9bd834e50279/publish-settings/new-profile"}
dependencies = ["apimatic-core~=0.2.0, >= 0.2.17", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
